--- a/site2.0/css/style.css
+++ b/site2.0/css/style.css
@@ -8,7 +8,7 @@ html, body
 h1
 {
     position: absolute;
-    top: 40px;
+    top: 70px;
     font-family: 'Montserrat', sans-serif;
     left: 3%;
 }
@@ -86,7 +86,7 @@ h2
     to{opacity: 1;}
 }
 
-.show{
+.show_animacao{
     animation-name: animacao_aparecer;
     animation-duration: 1s;
 }
@@ -98,6 +98,29 @@ h2
     to {
         transform: translateX(0);
     }
+}
+
+/* css da nav bar*/
+#navBar{
+    position: fixed;
+    top: 0;
+    background-color: #EBEBEB;
+    width: 100%;
+    height: 40px;
+    z-index: 11;
+}
+
+#dropdown{
+    position: absolute;
+    top: 1px;
+    left: 0;
+}
+
+.item_nav{
+    position: absolute;
+    top: 0;
+    right: 1%;
+    font-size: 30px;
 }
 
 /* css da tela inicial*/
