--- a/site2.0/css/resultado.css
+++ b/site2.0/css/resultado.css
@@ -118,20 +118,6 @@
     cursor: pointer;
 }
 
-#ir_compartilhar{
-    position: absolute;
-    font-family: 'Cabin', sans-serif;
-    top: 70%;
-    right: 10%;
-    height: 90px;
-    width: 250px;
-    border: 0;
-    border-radius: 15px;
-    background-color: #31C1B0;
-    transition-duration: .2s;
-    cursor: pointer;
-}
-
 #ir_quiz{
     position: absolute;
     font-family: 'Cabin', sans-serif;
@@ -146,7 +132,7 @@
     cursor: pointer;
 }
 
-#ir_inicio, #ir_quiz, #ir_compartilhar
+#ir_inicio, #ir_quiz
 {
     outline-style: dashed;
     outline-width: 0px;
@@ -154,7 +140,7 @@
 
 /* HOVER */
 
-#ir_inicio:hover, #ir_compartilhar:hover, #ir_quiz:hover
+#ir_inicio:hover, #ir_quiz:hover
 {
     outline-width: 5px;
     outline-style: solid;
@@ -165,11 +151,6 @@
     outline-color: #efefef;
 }
 
-#ir_compartilhar:hover
-{
-    outline-color: #31C1B0;
-}
-
 #ir_quiz:hover
 {
     outline-color: var(--cor_caixa_titulo);
@@ -177,7 +158,7 @@
 
 /* ACTIVE */
 
-#ir_inicio:active, #ir_compartilhar:active, #ir_quiz:active
+#ir_inicio:active, #ir_quiz:active
 {
     outline-style: none;
 }
@@ -185,10 +166,6 @@
 #ir_inicio:active{
     background: #808080;
     outline: 0;
-}
-
-#ir_compartilhar:active{
-    background-color: #248176;
 }
 
 #ir_quiz:active{
