--- a/site2.0/css/resultado_celular.css
+++ b/site2.0/css/resultado_celular.css
@@ -102,6 +102,20 @@ body{
     cursor: pointer;
 }
 
+#ir_mediaGlobal{
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    font-family: 'Cabin', sans-serif;
+    top: 30%;
+    left: 25%;
+    border: 0;
+    transition-duration: .2s;
+    border-radius: 45px;
+    background-color: #31C1B0;
+    cursor: pointer;
+}
+
 #ir_quiz{
     position: absolute;
     width: 200px;
