--- a/site2.0/css/resultadoDados.css
+++ b/site2.0/css/resultadoDados.css
@@ -38,18 +38,31 @@ html{
     height: 20%;
     background-color: var(--cor_caixa_titulo);
     z-index: 5;
+    box-shadow: var(--cor_caixa_titulo) 0px 3px 88px;
+}
+
+
+#caixa_titulo_imagem{
+    background-repeat: repeat-x;
+    z-index: -5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: opacity(14%);
+    width: 100%;
+    height: 100%;
 }
 
 /* FONTES, CORES e POSIÇÕES */
 
-#texto_titulo, #numero_media, #irInicio, #RefazerQuiz
+#texto_titulo, #numero_media, #irInicio, #irResultado
 {
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     color: #012030;
 }
 
-#irInicio, #RefazerQuiz{
+#irInicio, #irResultado{
     cursor: pointer;
     width: var(--largura_botoes);
     right: 0;
@@ -67,31 +80,36 @@ html{
 }
 
 #texto_titulo{
+    top: 19%;
     left: 2%;
     font-size: var(--mediaGlobal_tamanho_texto);
 }
 
+#irInicio, #irResultado{
+    font-size: 1.8vh;
+}
+
 #irInicio
 {
-    margin-top: 2%;
+    margin-top: 1.5%;
     top: 48%;
     background-color: #D9D9D9;
 }
 
-#RefazerQuiz{
-    margin-top: 2%;
+#irResultado{
+    margin-top: 1.5%;
     background-color: var(--cor_caixa_titulo);
     filter: brightness(80%);
 }
 
 /* HOVERS */
-#RefazerQuiz:hover, #irInicio:hover{
+#irResultado:hover, #irInicio:hover{
     filter: brightness(70%);
 }
 
 /* ACTIVE */
 
-#RefazerQuiz:active, #irInicio:active{
+#irResultado:active, #irInicio:active{
     filter: brightness(50%);
 }
 
@@ -113,18 +131,19 @@ html{
 .textos p{
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 30px;
+    margin-top: 98px;
     color: #FFFFFF;
-    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 200;
-    font-size: 15px;
+    font-size: 19px;
+    font-family: 'Montserrat', sans-serif;
     line-height: 20px;
 }
 
 .questao{
     margin-top: 40px;
     margin-left: 10%;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .questao:nth-child(1){
@@ -135,8 +154,6 @@ html{
 #tituloQuestao{
     margin-bottom: 40px;
     color: #FFFFFF;
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 600;
     font-size: var(--fonte_titulo);
 }
@@ -148,8 +165,6 @@ html{
 .option{
     margin-bottom: 20px;
     color: #FFFFFF;
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 400;
     font-size: var(--fonte_opcao);
 }
