--- a/site2.0/css/resultado.css
+++ b/site2.0/css/resultado.css
@@ -127,7 +127,7 @@
     width: 250px;
     border: 0;
     border-radius: 15px;
-    background-color: #31C1B0;
+    background-color: var(--cor_caixa_titulo);
     transition-duration: .2s;
     cursor: pointer;
 }
@@ -153,7 +153,7 @@
 
 #ir_mediaGlobal:hover
 {
-    outline-color: #31C1B0;
+    outline-color: var(--cor_caixa_titulo);
 }
 
 /* ACTIVE */
