--- a/site2.0/css/passagemDados.css
+++ b/site2.0/css/passagemDados.css
@@ -1,3 +1,72 @@
+html{
+    background-color: #45C4B0;
+    color: #012030;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: 5%;
+}
+
+h1{
+    font-weight: 700;
+    width: 90%;
+    margin-right: 5%;
+    word-break: normal;
+    font-size:xx-large;
+}
+
+label{
+    font-size: x-large;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+input[type="radio"]{
+    border: 0;
+    width: 18px;
+    height: 18px;
+}
+
+label:hover,input[type="radio"]:hover{
+    cursor: pointer;
+}
+
+p{
+    font-weight: 500;
+    width: 86%;
+    margin-right: 4%;
+    font-size: larger;
+    word-break: normal;
+    line-break: normal;
+}
+
+button[name="botao"]{
+    display: none;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 30px;
+    width: auto;
+    padding: 5px 20px;
+    cursor: pointer;
+    font-size: large;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    background-color: #DAFDBA;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+    font-weight: 500;
+    border: none;
+}
+
+button[name="botao"]:hover{
+    filter: brightness(70%);
+}
+
+button[name="botao"]:active{
+    filter: brightness(50%);
+}
+
 #formulario_email{
     display: none;
+}
+
+input[type="email"]
+{
+    padding: 10px 30px;
 }
