--- a/site2.0/css/style.css
+++ b/site2.0/css/style.css
@@ -526,6 +526,58 @@ h2
     scale: 60%;
 }
 
+.flip-card 
+{
+    position: relative;
+    top: 15%;
+    background-color: transparent;
+    max-width: 390px;
+    height: 200px;
+    width: auto;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner 
+{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner 
+{
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back 
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front 
+{
+    background-color: #bbb;
+    color: black;
+}
+
+/* Style the back side */
+.flip-card-back 
+{
+    background-color: #EBEBEB;
+    color: #042940;
+    transform: rotateY(180deg);
+}
 
 /* declaração de variaveis */
 :root{
