ajustes nos cards novos

--- a/site2.0/css/style.css
+++ b/site2.0/css/style.css
@@ -526,16 +526,22 @@ h2
     scale: 60%;
 }
 
-.flip-card 
+.container{
+    display: flex;
+    justify-content: center;
+    margin-top: 18%;
+}
+
+.flip-card
 {
     position: relative;
-    top: 15%;
     background-color: transparent;
+    margin-right: auto;
+    margin-left: auto;
     max-width: 390px;
     height: 200px;
-    width: auto;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    width: 100%;
+    perspective: 1000px;
 }
 
 /* This container is needed to position the front and back side */
@@ -565,11 +571,11 @@ h2
 }
 
 /* Style the front side (fallback if image is missing) */
-.flip-card-front 
+/* .flip-card-front 
 {
     background-color: #bbb;
     color: black;
-}
+} */
 
 /* Style the back side */
 .flip-card-back 
@@ -577,6 +583,12 @@ h2
     background-color: #EBEBEB;
     color: #042940;
     transform: rotateY(180deg);
+    overflow: auto;
+}
+
+.txtCard{
+    text-align: left;
+    margin-left: 10px;
 }
 
 /* declaração de variaveis */
@@ -601,6 +613,20 @@ h2
     --left_navegacao_desenvolvedores : 5%;
 }
 
+@media screen and (max-width : 950px)
+{
+    .container {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-top: 13%;
+    }
+    .flip-card {
+        max-width: 100%;
+        margin-bottom: 5px;
+      }
+}
+
 @media screen and (max-width : 700px){
     :root{
         --tamanho_imagem_pilar : 75px;
@@ -623,12 +649,24 @@ h2
         --left_navegacao_desenvolvedores : 0%;
     }
     
-    #imagem_globo{
-        display: none;
-    }
+    .flip-card {
+        max-width: 100%;
+        margin-bottom: 15%;
+      }
 }
 
 @media screen and (max-width : 400px){
+    .container {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-top: 28%;
+    }
+    
+    .flip-card {
+        max-width: 100%;
+        margin-bottom: 15%;
+      }
     :root{
         --tamanho_lista_pontuacao : 20px;
         --tamanho_fonte_topicos : 25px;
