--- a/site2.0/css/test.css
+++ b/site2.0/css/test.css
@@ -507,6 +507,12 @@ footer > a:hover
     text-decoration: underline;
 }
 
+details code
+{
+    background-color: gainsboro; 
+    cursor: context-menu;
+}
+
 @media only screen and (max-width: 1050px) 
 {
     
