estilização básica aplicada

--- a/site2.0/css/passagemDados.css
+++ b/site2.0/css/passagemDados.css
@@ -1,71 +1,5 @@
-html{
-    background-color: #45C4B0;
-    color: #012030;
-    font-family: 'Montserrat', sans-serif;
-    margin-right: 5%;
-    margin-left: 5%;
-}
+/* 
 
-h1{
-    font-weight: 700;
-    word-break: normal;
-    font-size:xx-large;
-}
+    deixe aqui vazio por enquanto, mas não delete o arquivo
 
-label{
-    font-size: x-large;
-    font-weight: 500;
-    margin-right: 10px;
-}
-
-input[type="radio"]{
-    margin: 2% 0 2% 0;
-    border: 0;
-    width: 18px;
-    height: 18px;
-}
-
-label:hover,input[type="radio"]:hover{
-    cursor: pointer;
-}
-
-p{
-    font-weight: 500;
-    max-width: 80%;
-    font-size: larger;
-    word-break: normal;
-    line-break: normal;
-}
-
-button[name="botao"]{
-    display: none;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 30px;
-    width: auto;
-    padding: 5px 20px;
-    cursor: pointer;
-    font-size: large;
-    margin-top: 25px;
-    margin-bottom: 5px;
-    background-color: #DAFDBA;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
-    font-weight: 500;
-    border: none;
-}
-
-button[name="botao"]:hover{
-    filter: brightness(70%);
-}
-
-button[name="botao"]:active{
-    filter: brightness(50%);
-}
-
-#formulario_email{
-    display: none;
-}
-
-input[type="email"]
-{
-    padding: 10px 30px;
-}
+*/
